major updates to intro framing to incorporate representativeness; minor updates elsewhere to mark where it should go and to our discussion of what hierarchical Bayes can do in prior work

--- a/Manuscripts/cog-psych/revision/citations.bib
+++ b/Manuscripts/cog-psych/revision/citations.bib
@@ -225,6 +225,62 @@
 	year = {2016}
 }
 
+@article{hahn09,
+	author = {U. Hahn and P. A. Warren},
+	title = {Perception of randomness: why three heads are better than four},
+	journal = {Psychological Review},
+	volume = {116},
+	pages = {454--461},
+	year = {2009}
+}
+
+@article{tversky74,
+	author = {A. Tversky and D. Kahneman},
+	title = {Judgment under uncertainty: {H}euristics and biases},
+	journal = {Science},
+	volume = {185},
+	pages = {1124--1131},
+	year = {1974}
+}
+
+@article{reimer18,
+	author = {S. Reimers and C. Donkin and M. E. {Le Pelley}},
+	title = {Perceptions of randomness in binary sequences: Normative, heuristic, or both?},
+	journal = {Cognition},
+	volume = {172},
+	pages = {11--25},
+	year = {2015}
+}
+
+@article{tversky83,
+	author = {A. Tversky and D. Kahneman},
+	title = {Extensional vs. intuitive reasoning: {T}he conjunction fallacy in probability judgment},
+	journal = {Psychological Review},
+	volume = {90},
+	pages = {293--315},
+	year = {1983}
+}
+
+@article{thomas98,
+	author = {R. D. Thomas},
+	title = {Learning Correlations in Categorization Tasks Using Large, Ill-Defined Categories},
+	journal = {Journal of Experimental Psychology: Learning, Memory, and Cognition},
+	volume = {24},
+	number = {1},
+	pages = {119--143},
+	year = {1998}
+}
+
+@article{griffiths18,
+	author = {T. L. Griffiths and D. Daniels and J. L. Austerweil and J. B. Tenenbaum},
+	title = {Subjective randomness as statistical inference},
+	journal = {Cognitive Psychology},
+	year = {in press},
+	pages = {xx-xx},
+	volume = {YY},
+	year = {2018}
+}
+
 @inproceedings{tenenbaum01,
 	author = {J. B. Tenenbaum and T. L. Griffiths},
 	title = {The rational basis of representativeness},
