--- a/Manuscripts/cog-psych/revision/cogpsych.tex
+++ b/Manuscripts/cog-psych/revision/cogpsych.tex
@@ -68,7 +68,7 @@ E-mail: austerweil@wisc.edu
 % ------- ABSTRACT PAGE ------- %
 \doublespacing
 \section*{Abstract}
-
+\jlanote{need to update}
 The ability to creatively generate new concepts and ideas is among the most fascinating aspects of human cognition, but we do not have a strong understanding of the cognitive processes and representations underlying concept generation. In this paper, we study the generation of new categories using the computational and behavioral toolkit of traditional artificial category learning. Previous work in this domain has focused on how the statistical structure of known categories generalizes to generated categories, overlooking the degree of contrast between the known and generated categories as a factor. We report two experiments demonstrating that contrast between what is known and what is created is of fundamental importance for categorization and the creative process. We propose a novel, exemplar-based approach explaining our results, and compare the model's performance to two key alternatives. Our experiments and simulations demonstrate specifically how category contrast influences creative generation, and how it can interact with other constraints to produce different types of creations. Our work also serves as a concrete example of how well-established and highly controlled experimental frameworks (such as those in the field of category learning) can be used to make progress in an intriguing yet understudied domain.
 
 \setlength\parindent{0.5in}
@@ -99,21 +99,21 @@ Generating and learning new concepts are, however, not altogether different from
 
 Previous work in category learning and generation has established that people are highly sensitive to the structural properties of categories, such as correlations between the features of category members and the relation between items within the same category and those in different categories \citep{roschmervis1975,regier2007,shepard1961learning,smith1995}. Inspired by this work, previous research on the topic of category generation has explored a similar principle: People tend to create new categories that have similar {\em statistical regularities} as previously learned categories \citep{jern2013probabilistic,ward1994structured}. Although this is an important characteristic of generating new categories, it cannot be the only one. Taken to the extreme, the best ``new'' category in terms of having the same statistical regularities to other categories would be identical to a known category that is representative of the domain (and thus, not new at all). 
 
-To successfully generate something novel, what is generated must be different from what is already known. This fundamental constraint, ``being different'', or contrasting from other categories in the relevant domain, is the focus of our work. Although implicitly assumed in some work, this constraint has been overlooked in previous research: To our knowledge, there has not been any systematic investigation addressing how generated categories {\em differ} from what is already known. Although the idea of category contrast is ubiquitous throughout the categorization literature, and extends to a variety of other fields \citep[e.g., color;][]{regier2007}, the idea that a new category should be ``different'' is vague, as there are many ways it could be different from a previously observed category. 
+To successfully generate something novel, what is generated must be different from what is already known. This fundamental constraint, ``being different'', or contrasting from other categories in the relevant domain, is the focus of our work. Although implicitly assumed in some work, this constraint has been overlooked in previous research: To our knowledge, there has not been any systematic investigation addressing how generated categories {\em differ} from what is already known. Although the idea of category contrast is ubiquitous throughout the categorization literature, and extends to a variety of other fields \citep[e.g., color;][]{regier2007}, the idea that a new category should be ``different'' is vague, as there are many ways it could be different from a previously observed category.
 
-We examine two different definitions of how categories should differ from one another: exemplar contrast or representative of the alternative category. To formalize the first technique, we build on the largely successful exemplar modeling framework that \citep{medin1978context,nosofsky1984choice,nosofsky1986attention}. In doing so, we propose a novel exemplar model of category generation, {\em Producing Alike and Contrasting Knowledge using Exemplar Representations} (PACKER), formalizing how new categories should differ from previous categories. It embodies the exemplar contrast principle by incorporating a factor that repulses members of opposite categories from one another. To foreshadow, we find that this notion of contrast predicts human category learning performance, above and beyond other category learning models in a novel behavioral experiment. This demonstrates that contrast plays a central role in other important categorization tasks, which is not specific to category generation
+We examine two different definitions of how categories should differ from one another: exemplar contrast or representative of the alternative category. To formalize the first technique, we build on the largely successful exemplar modeling framework that \citep{medin1978context,nosofsky1984choice,nosofsky1986attention}. In doing so, we propose a novel exemplar model of category generation, {\em Producing Alike and Contrasting Knowledge using Exemplar Representations} (PACKER), formalizing how new categories should differ from previous categories. It embodies the exemplar contrast principle by incorporating a factor that repulses members of opposite categories from one another. To foreshadow, we find that this notion of contrast predicts human category learning performance, above and beyond other category learning models in a novel behavioral experiment. This demonstrates that contrast plays a central role in other important categorization tasks, which is not specific to category generation.
 
-To formalize the hypothesis that people expect a new category to be representative of the opposite of the current category, or contrast as {\em representativeness} \citep{kahneman73}, we use the Bayesian formulation of representativeness \citep{tenenbaum01}, which has been used successfully to capture human performance in color categorization \citep{abbott16}, image category learning \citep{abbott11}, and language grammar learning \citep{rafferty10}. We do so by extending the state-of-the-art category generation model \citep{jern2013probabilistic} and find that  human category generation is best capture as generating representative, rather than probable, samples.
+The second hypothesis for how contrast affects categorization is contrast as {\em representativeness} \citep{kahneman73}. The representativeness heuristic states that people make judgments regarding the probability of an outcome based on how representative it is of the observed evidence. The heuristic is a powerful theoretical construct that has been used to capture a range of complex patterns of human judgments \citep{kahneman73,tversky74,tversky83}, especially those that deviate from normative theory (as given by Bayesian inference). For example, the coinflip sequence TTHTH is perceived to be more random than TTTTT (despite both having the same probability of having been generated from a fair coin). Although there is a healthy debate as to whether perceived randomness {\em really} deviates from normative theory \citep{griffiths18,hahn09}, the representativeness heuristic remains one of the main explanations of human judgments \citep{reimers18}. To formalize the hypothesis that people expect a new category to be representative of the opposite of the current category, or contrast as {\em representativeness}, we use the Bayesian formulation of representativeness \citep{tenenbaum01}, which has been used successfully to capture human performance in color categorization \citep{abbott16}, image category learning \citep{abbott11}, and language grammar learning \citep{rafferty10}. We do so by extending the state-of-the-art category generation model \citep{jern2013probabilistic} and find that  human category generation is best capture as generating representative, rather than probable, samples.
 
-The outline of the article is as follows. First we describe previous empirical work on the topic of category generation, as well as the computational formalizations of the theories in those reports. Then we describe our novel computational model, which is designed to generate categories that systematically differ from existing categories in the domain. We present two experiments demonstrating strong and systematic effects of category contrast on creative generation, and we qualitatively and quantitatively analyze the performance of each model in capturing human category generation. We conclude with a discussion of the implications of our results for categorization and creative cognition, and directions for future work.
+The outline of the article is as follows. First we describe previous empirical work on the topic of category generation, as well as the computational formalizations of the theories in those reports. We then present two hypotheses for how contrast might affect categorization and formalize them in computational models. The first is a novel computational model, which is designed to generate categories that systematically differ from existing categories in the domain. The second assumes the goal of category generation is to create representative samples of the opposite of the observed categories. We present two experiments demonstrating strong and systematic effects of category contrast on creative generation, and we qualitatively and quantitatively analyze the performance of each model in capturing human category generation. We conclude with a discussion of the implications of our results for categorization and creative cognition, and directions for future work.
 
 \section{Prior work}
 
 Much of what we know about concept generation comes from the foundational literature on creative cognition. In a series of reports, Ward and colleagues \citep{ward1995s,ward1994structured,marsh1999inadvertent,ward2002role,smith1993constraining} established that category generation is highly constrained by prior knowledge: Generated categories tend to consist of features observed in known categories, and they tend to exhibit the distributional properties as found in known categories. In a seminal study, \cite{ward1994structured} asked participants to generate new species of alien animals by drawing and describing members of the species. People tended to generate species with the same features as on Earth (e.g., eyes, legs, wings), and possessing the same feature correlations as on Earth (e.g., feathers co-occur with wings). Likewise, aliens drawn from the same species tended to share more features with one another compared to members of opposite species. 
 
-The broader set of observations made by Ward and colleagues provide a great deal of insight into the nature of creative generation. They indicate that people rely strongly on prior knowledge in the creative process, and people generate concepts in accord with what they already know. Much of the work from this area \citep[e.g.,][]{smith1993constraining,marsh1999inadvertent} focuses on how information provided to participants (such as an example of a species generated by other participants) can drastically diminish creativity. Theoretical accounts of these effects have primarily been grounded within the categorization literature. For example, the predominant ``Path of Least Resistance'' account \citep[see][]{ward1994structured,ward1995s,ward2002role} proposes that, when generating a new species of animal, people retrieve from memory a known subcategory of animals (e.g., {\em bird}, {\em dog}, {\em horse}), and simply change some of the features to make something new. People are thought to change only features that are not characteristic of the retrieved category (e.g., if {\em bird} was retrieved, the presence of {\em wings} would not change, but {\em color} might). This theory incorporates elements of the highly influential basic-level categories framework \citep{rosch1975cognitive,rosch1976basic}, as well as the exemplar view \citep{medin1978context,brooks1978nonanalytic}. While this work is been incredibly useful in providing a conceptual sketch of generation theories, the hand-drawn responses used in the experiments paradigms precludes the development of formal approaches that can be used to test the theories in a fine-grained manner.
+The broader set of observations made by Ward and colleagues provide a great deal of insight into the role of prior knowledge in constraining category generation. Much of the work from this area \citep[e.g.,][]{smith1993constraining,marsh1999inadvertent} focuses on how information provided to participants (such as an example of a species generated by other participants) can drastically diminish difference of a new category from pre-existing categories. Theoretical accounts of these effects have primarily been grounded within the categorization literature. For example, the predominant ``Path of Least Resistance'' account \citep[see][]{ward1994structured,ward1995s,ward2002role} proposes that, when generating a new species of animal, people retrieve from memory a known subcategory of animals (e.g., {\em bird}, {\em dog}, {\em horse}), and simply change some of the features to make something new. People are thought to change only features that are not characteristic of the retrieved category (e.g., if {\em bird} was retrieved, the presence of {\em wings} would not change, but {\em color} might). This theory incorporates elements of the highly influential basic-level categories framework \citep{rosch1975cognitive,rosch1976basic}, as well as the exemplar view \citep{medin1978context,brooks1978nonanalytic}. While this work is been incredibly useful in providing a conceptual sketch of generation theories, the hand-drawn responses used in the experiments paradigms precludes the development of formal approaches that can be used to test the theories in a fine-grained manner.
 
-\cite{jern2013probabilistic} recently showed that creative generation could be studied in a more controlled manner through the well-developed methods of an artificial categorization paradigm \citep[see][for a review]{kurtz2015human}. In Experiments 3 and 4 of their article, participants were exposed to members of experimenter-defined categories of "crystals" varying in size, hue, and saturation. Following a training phase during which the experimenter-defined categories were learned, participants were asked to generate novel categories of crystals. In a finding mirroring that of the \cite{ward1994structured} studies, \cite{jern2013probabilistic} found that participants generated categories with the same distributional properties as the experimenter-defined categories. For example, after training on categories with a positive correlation between the size and saturation features (larger sized crystals were more saturated), participants generated novel categories with the same positive correlation. This finding is notable, as it demonstrates that category generation can be studied in a well-known and highly controlled experimental paradigm. 
+\cite{jern2013probabilistic} recently showed that concept generation could be studied in a more controlled manner through the well-developed methods of an artificial categorization paradigm \citep[see][for a review]{kurtz2015human}. In Experiments 3 and 4 of their article, participants were exposed to members of experimenter-defined categories of "crystals" varying in size, hue, and saturation. Following a training phase during which the experimenter-defined categories were learned, participants were asked to generate novel categories of crystals. In a finding mirroring \cite{ward1994structured}, \cite{jern2013probabilistic} found that participants generated categories with the same distributional properties as the experimenter-defined categories. For example, after training on categories with a positive correlation between the size and saturation features (larger sized crystals were more saturated), participants generated novel categories with the same positive correlation. This finding is notable, as it demonstrates that category generation can be studied in a well-known and highly controlled experimental paradigm. 
 
 The authors evaluated the predictions of several formal models on their data. Most notably, they showed that a hierarchical Bayesian model provided the strongest account of their results. Their model views observed examples as samples from an underlying category distribution, describing the location of the category in the space, as well as how it varies along each feature. In turn, each category is viewed as a sample from an underlying {\em domain} distribution, specifying distributional commonalities among the observed categories. Generated categories are thought to stem from the same domain distribution as observed categories, thus the distributional properties of observed categories will be preserved within the generated category.
 
@@ -122,15 +122,17 @@ The authors evaluated the predictions of several formal models on their data. Mo
 
 \section{And Now for Something Different: A Role For Contrast}
 
-Prior work on category generation has explored only one of the possible constraints that guide category generation. The main concern of the published experiments has been on the distributional correspondences between learned and generated categories, and as a result most of the computational, theoretical, and empirical efforts have been focused on explaining those effects. In this paper, we investigate another important constraint: category contrast. To generate a novel concept, individuals must produce something that is in some capacity {\em different} from what they already know. By consequence, we propose that contrast should be a primary constraint on creative generation: New concepts should be different from existing ones. 
+Prior work on category generation has explored only one factor: distributional correspondences between learned and generated categories. As a result most of the computational, theoretical, and empirical efforts have been focused on explaining those effects. In this paper, we investigate another important factor: category contrast. To generate a novel concept, individuals must produce something that is in some capacity {\em different} from what they already know. By consequence, we propose that contrast should be a primary constraint that guides how people create new categories: New categories should be different from existing ones. 
 
-Although it is evident that people are {\em capable} of creating new concepts and categories, it is not entirely clear how new concepts are systematically made different from what is already known. The hierarchical Bayesian model developed by \cite{jern2013probabilistic} assumes that differences between observed and generated categories are only due to random variation. The model assumes that generated categories are sampled from the same underlying domain distribution as observed categories, and will thus share a common distributional structure. The model does not make predictions about the {\em location} of the category within the domain (the perceptual instantiation of category members). Under a strict interpretation of their model, given knowledge of a single category within the domain, the most probable new category to be generated is located in {\em exactly} the same location and possesses an identical distributional structure. This is not an issue with their model specifically, but with a broader class of standard hierarchical Bayesian models \citep[e.g., ][]{griffithsscn07,kemp07}. Many of these models assume that at some point of the latent generative process the same underlying distribution generates all of the categories and thus, any differences between categories are due to {\em noise} and should not be {\em systematic}. The best a standard hierarchical Bayesian model can do at capturing contrast is to assume that the new category is placed uniformly at random over stimulus space. But, this defeats the purpose of a hierarchy as it is ignored when determining a new category location!\footnote{It is plausible that some hierarchical Bayesian model could be created that generates categories different from each other. However, this model would not be a standard application or extension of most pre-existing hierarchical Bayesian models. The generative process would need to include a component that promotes contrast.}
+\jlanote{check to make sure the next paragraph has been updated enough}
+
+Although it is evident that people are {\em capable} of creating new concepts and categories, it is not entirely clear how new concepts are systematically made different from what is already known. The hierarchical Bayesian model developed by \cite{jern2013probabilistic} assumes that differences between observed and generated categories are only due to random variation. The model assumes that generated categories are sampled from the same underlying domain distribution as observed categories, and will thus share a common distributional structure. The model does not make predictions about the {\em location} of the category within the domain (the perceptual instantiation of category members). Under a strict interpretation of their model, given knowledge of a single category within the domain, the most probable new category to be generated is located in {\em exactly} the same location and possesses an identical distributional structure. This is not an issue with their model specifically, but with a broader class of standard hierarchical Bayesian models \citep[e.g., ][]{griffithsscn07,kemp07}. Many of these models assume that at some point of the latent generative process the same underlying distribution generates all of the categories and thus, any differences between categories are due to {\em noise} and should not be {\em systematic}. If the goal of creating a new category given others in a domain is generating from the posterior predictive distribution then, the best a standard hierarchical Bayesian model without a notion of contrast built into the model can do at capturing contrast is to assume that the new category is placed uniformly at random over stimulus space. But, this defeats the purpose of a hierarchy as it is ignored when determining a new category location!\footnote{It is plausible that some hierarchical Bayesian model could be created that generates categories different from each other. However, this model would not be a standard application or extension of most pre-existing hierarchical Bayesian models. The generative process would need to include a component that promotes contrast.} Note that this does not mean location information and contrast cannot be captured using hierarchical Bayesian models. In fact, our model of contrast as representativeness is a hierarchical Bayesian model, but with a different goal than predicting the next category. 
 
 The copy-and-tweak model tested by \cite{jern2013probabilistic} also claims little about how generated categories should contrast with what is already known. In their simulations, the model was only tested on generation after the learner had been exposed to members of the target category, and so the model's ability to generate a new category from scratch was not evaluated. However, the model's generation is based exclusively on similarity to known members of the {\em target} category; when there are no members of the target category, generation is presumably random.
 
 \subsection{Novel Analyses Demonstrating Contrast Effects in Prior Work}
 
-Although existing accounts of creative generation broadly overlook the role of category contrast in determining what is novel versus familiar, it was implicitly assumed that learners in previous experiments were {\em successful} in creating new categories. Thus, effects of category contrast should be observable within the experimental results of these studies. To provide a test of the influence of category contrast within existing data, we conducted a novel analysis of Experiment 3 from \cite{jern2013probabilistic}\footnote{Although \cite{jern2013probabilistic} reported four experiments, we focus on Experiment 3 because their first two experiments tested generation of items into known categories, and their fourth experiment was identical to Experiment 3 but with a restricted generation space.}. 
+Although existing accounts of category generation broadly overlook the role of category contrast in determining what is novel versus familiar, it was implicitly assumed that learners in previous experiments were {\em successful} in creating new categories. Thus, if contrast plays a robust role in category genration, its effects should be discernable within the experimental results of these studies. To provide a test of the influence of category contrast within existing data, we conducted a novel analysis of Experiment 3 from \cite{jern2013probabilistic}.\footnote{Although \cite{jern2013probabilistic} reported four experiments, we focus on Experiment 3 because their first two experiments tested generation of items into known categories, and their fourth experiment was identical to Experiment 3 but with a restricted generation space.}
 
 Participants in their experiment were exposed to members of two experimenter-defined categories of `crystals' varying in hue, saturation, and size. Each category possessed a unique hue, but varied in saturation and size: In the `Positive' condition, there was a positive correlation between these features (i.e., larger sized crystals were more saturated), and in the `Negative' condition this relation was reversed. In the `Neutral' condition, there was no correlation between saturation and size. After learning about the categories from each condition, participants were asked to generate six exemplars belonging to a novel class. As noted above, \cite{jern2013probabilistic} found that the generated categories tended to follow the distributional properties of the experimenter-defined categories: Generated categories were tightly distributed along the hue feature, and possessed the same saturation-size correlations as in the learned categories. \cite{jern2013probabilistic}, however, did not analyze or discuss how the generated categories {\em differed} from the experimenter-defined categories. 
 
@@ -209,6 +211,9 @@ The PACKER model is similar to the copy-and-tweak model reported by \cite{jern20
 
 In this paper, we report simulations using this copy-and-tweak model. This model fits within the exemplar-based category generation framework defined above, under the constraint that $\gamma = 1$, and is a continuous-dimension adaptation of the model tested by \cite{jern2013probabilistic}. By formalizing a model family where PACKER and copy-and-tweak are different parameterizations of models within the same framework, the comparison between PACKER and copy-and-tweak provides a test of the explanatory value of the contrast mechanism: The account provided by copy-and-tweak will only equal that of PACKER if the contrast mechanism does not offer an advantage (i.e., if $\gamma < 1$ significantly improves model fits). Note that the purpose of the article is to explore and formally analyze the role of contrast in category generation and thus, we leave extending PACKER to incorporate distributional factors \citep[as explored by][]{jern2013probabilistic} for future work.
 
+\subsection{Contrast as representativeness: An extension to Jern and Kemp (2013)}
+
+TODO: fill in Bayesian definition of representativeness and its application in JK2013.
 
 \subsection{Synopsis and Prognosis}
 
@@ -562,6 +567,9 @@ Although our work has mainly addressed the processes involved in the creative ge
 Categorization research addresses the representations and processes that underlie the learning and use of categories. Category learning tasks are generally about figuring out which items belong to which category. Once learned, categories are generally used to classify new stimuli and to make inferences beyond the available information. Our work is fairly unique in that people learn a single category through positive examples and then figure out another category that would make sense in the domain. In other words, only one category is provided to be learned and the use that is required of that category is to generate a contrast category. Such propagating of categories (producing one from another) may not seem like a fundamental or ubiquitous cognitive activity, but consider navigating a highly unfamiliar environment -- it would be practical, perhaps even critical, to generate expectations about what other kinds of things you are likely to encounter based on those that you already have. In the present studies, we have learned something about the form that such expectations are likely to take. 
 
 We can think of the category generation task in our studies as asking a person to formulate an idea about what set of items in the domain are most interestingly {\em not} members of the original category. To meet this condition, the items must take some form of coherence that aligns with that of the original category and some form of distinctiveness relative to the original category. Reflecting the basic level of organization in natural categories, it makes sense to generate a set of items that possess strong within-category coherence (by importing or systematically transforming the internal structure of the original category) as well as strong between-category differentiation (by creating maximum contrast with the original category). In this sense one can see the patterns of performance in the category generation task as recapitulating the order of semantic organization.
+
+\subsection{Representativeness in Categorization}
+MAKE SURE WE CITE AND DESCRIBE \citet{thomas98}!
 
 \subsection{Limitations and Future Directions}
 
